# system-tools-backends

./: .cvsignore  AUTHORS  ChangeLog  GroupsConfig.pm  HostsConfig.pm  IfacesConfig.pm  Loader.pl.in  MAINTAINERS  Makefile.am  NEWS  NFSConfig.pm  NTPConfig.pm  Platform.pm  SMBConfig.pm  SelfConfig.pm  ServicesConfig.pm  ServicesList.pm  SharesList.pm  ShellsConfig.pm  ShellsList.pm  StbObject.pm  SystemToolsBackends.pl.in  TODO  TimeConfig.pm  UserConfig.pm  UsersConfig.pm  UsersList.pm  add_amp.sh  autogen.sh  be.pl  be.pl.in  boot-conf.in  boot-grub.pl.in  boot-lilo.pl.in  boot-yaboot.pl.in  boot.pl.in  configure  configure.in  debug.pl.in  dhcpd-conf.in  (+75 more)
Init/: Makefile.am  Services.pm  ServicesList.pm
Net-DBus/: Makefile.PL  Makefile.am
Net-DBus/lib/: Makefile.am
Net-DBus/lib/Net/: DBus.pm  Makefile.am
Net-DBus/lib/Net/DBus/: Makefile.am
Net-DBus/lib/Net/DBus/Binding/: Iterator.pm  Makefile.am
Net-DBus/lib/Net/DBus/Binding/Message/: Makefile.am
Network/: Hosts.pm  Ifaces.pm  Makefile.am
Shares/: Exports.pm  Makefile.am  NFS.pm  SMB.pm
Time/: Makefile.am  NTP.pm  TimeDate.pm
Users/: Groups.pm  Makefile.am  Shells.pm  Users.pm
Utils/: Backend.pm  DBus.pm  File.pm  Makefile.am  Monitor.pm  Parse.pm  Platform.pm  Replace.pm  Report.pm  Util.pm  XML.pm
dispatcher/: Makefile.am  dispatcher.c  dispatcher.h  file-monitor.c  file-monitor.h  main.c
doc/: ChangeLog  protocol
doc/xsd/: ChangeLog  boot.xsd  disks.xsd  gst.xsd  install.xsd  internet-share.xsd  internetsharing.xsd  memory.xsd  network.xsd  networktypes.xsd  shares.xsd  sysv.xsd  xst.xsd
files/: ChangeLog  Makefile.am  debian_ipchains
m4macros/: Makefile.am
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lt.po  nb.po  nds.po  ne.po  nl.po  no.po  or.po  (+21 more)
services/: Makefile.am  org.freedesktop.SystemToolsBackends.GroupConfig2.service.in  org.freedesktop.SystemToolsBackends.GroupsConfig.service.in  org.freedesktop.SystemToolsBackends.GroupsConfig2.service.in  org.freedesktop.SystemToolsBackends.HostsConfig.service.in  org.freedesktop.SystemToolsBackends.IfacesConfig.service.in  org.freedesktop.SystemToolsBackends.NFSConfig.service.in  org.freedesktop.SystemToolsBackends.NTPConfig.service.in  org.freedesktop.SystemToolsBackends.Platform.service.in  org.freedesktop.SystemToolsBackends.SMBConfig.service.in  org.freedesktop.SystemToolsBackends.SelfConfig2.service.in  org.freedesktop.SystemToolsBackends.ServiceConfig2.service.in  org.freedesktop.SystemToolsBackends.ServicesConfig.service.in  org.freedesktop.SystemToolsBackends.TimeConfig.service.in  org.freedesktop.SystemToolsBackends.UserConfig.service.in  org.freedesktop.SystemToolsBackends.UserConfig2.service.in  org.freedesktop.SystemToolsBackends.UsersConfig.service.in  org.freedesktop.SystemToolsBackends.UsersConfig2.service.in
