AC_PREREQ(2.52)
dnl ==============================================================
dnl Process this file with autoconf to produce a configure script.
dnl ==============================================================
AC_INIT(system-tools-backends,1.9.0)
AC_CONFIG_AUX_DIR(.)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_PROG_LIBTOOL

dnl ==============================================================
dnl Set SCRIPTS_DIR, FILES_DIR 
dnl ==============================================================
if test "x${prefix}" = "xNONE"; then
  scriptsdir="${ac_default_prefix}/share/system-tools-backends-2.0/scripts"
  filesdir="${ac_default_prefix}/share/system-tools-backends-2.0/files"
else
  scriptsdir="${prefix}/share/system-tools-backends-2.0/scripts"
  filesdir="${prefix}/share/system-tools-backends-2.0/files"
fi

AC_SUBST(scriptsdir)
AC_SUBST(filesdir)

dnl ==============================================================
dnl END: Set SCRIPTS_DIR, FILES_DIR
dnl ==============================================================

DBUS_SERVICES_DIR="${prefix}/share/dbus-1/services"
AC_SUBST(DBUS_SERVICES_DIR)

AC_OUTPUT([
Makefile
m4macros/Makefile
system-tools-backends-2.0.pc
files/Makefile
Init/Makefile
Network/Makefile
Shares/Makefile
Time/Makefile
Users/Makefile
Utils/Makefile
SystemToolsBackends.pl
org.freedesktop.SystemToolsBackends.service
])

echo "

Configuration (BACKENDS):

	The backends will be installed in : ${scriptsdir}
	The files will be installed in    : ${filesdir}
"
