AC_PREREQ(2.52)
dnl ==============================================================
dnl Process this file with autoconf to produce a configure script.
dnl ==============================================================
AC_INIT(system-tools-backends,1.9.0)
AC_CONFIG_AUX_DIR(.)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_PROG_LIBTOOL


dnl scriptsdir & filesdir
scriptsdir="${datadir}/system-tools-backends-2.0/scripts"
filesdir="${datadir}/system-tools-backends-2.0/files"
AC_SUBST(scriptsdir)
AC_SUBST(filesdir)

dnl DBus services dir
DBUS_SERVICES_DIR="${prefix}/share/dbus-1/services"
AC_SUBST(DBUS_SERVICES_DIR)


dnl where is DBus system.d directory?
AC_ARG_WITH(dbus_sys, [  --with-dbus-sys=<dir>   where D-BUS system.d directory is])

if ! test -z "$with_dbus_sys" ; then
    DBUS_SYSTEMD_DIR="$with_dbus_sys"
else
    DBUS_SYSTEMD_DIR="${sysconfdir}/dbus-1/system.d"
fi
AC_SUBST(DBUS_SYSTEMD_DIR)
AC_DEFINE_UNQUOTED(DBUS_SYSTEMD_DIR, "$DBUS_SYSTEMD_DIR", [Where system.d dir for DBUS is])


dnl system-tools-backends admin group
AC_ARG_WITH(stb_group,[  --with-stb-group=<grp>  Group for system-tools-backends (stb-admin)])
if test -z "$with_stb_group" ; then
    STB_GROUP=stb-admin
else
    STB_GROUP=$with_stb_group
fi
AC_SUBST(STB_GROUP)
AC_DEFINE_UNQUOTED(STB_GROUP,"STB_GROUP", [Group for system-tools-backends])


AC_OUTPUT([
Makefile
m4macros/Makefile
system-tools-backends-2.0.pc
files/Makefile
Init/Makefile
Network/Makefile
Shares/Makefile
Time/Makefile
Users/Makefile
Utils/Makefile
SystemToolsBackends.pl
org.freedesktop.SystemToolsBackends.service
system-tools-backends.conf
])

echo "

Configuration (BACKENDS):

  Prefix                            : ${prefix}
  The backends will be installed in : ${scriptsdir}
  The files will be installed in    : ${filesdir}

  DBus system.d directory           : ${DBUS_SYSTEMD_DIR}
  System tools backends admin group : ${STB_GROUP}
"
